--- a/src/component/list/List.module.css
+++ b/src/component/list/List.module.css
@@ -5,3 +5,10 @@
   background-color: rgb(4, 52, 99);
   color: white;
 }
+.dark{
+  background-color: black;
+  width: 100%;
+  padding: 1em;
+  border-radius: 1em;
+  color: white;
+}
